--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "clsx": "^2.1.1",
     "framer-motion": "^12.9.2",
     "gsap": "^3.12.7",
+    "hls.js": "^1.6.2",
+    "howler": "^2.2.4",
     "lenis": "^1.3.1",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
@@ -28,8 +30,10 @@
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-player": "^2.16.0",
     "react-use-measure": "^2.1.7",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "ytdl-core": "^4.11.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
